perf(app): lazy load analytics and smooth scroll handling

--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -24,7 +24,9 @@
     <link rel="preconnect" href="https://js.stripe.com">
     <link rel="preconnect" href="https://api.stripe.com">
     <link rel="preconnect" href="https://res.cloudinary.com">
-    
+    <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin>
+    <link rel="preconnect" href="https://connect.facebook.net" crossorigin>
+
     <!-- DNS prefetch for Google Tag Manager -->
     <link rel="dns-prefetch" href="//www.googletagmanager.com">
     
